--- a/contact_us.html
+++ b/contact_us.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-<title>Contact Us</title>
+<title>Contact</title>
    <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
